# hello-world

./: .gitignore  README.md  concordance_bibliography.bib  config.carbon-nanotubes.yaml  config.concordant.yaml  config.cultural-fluency.yaml  config.researchclaw.example.yaml  pyproject.toml
artifacts/gas-prices-er-visits/: paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  paper_final.md  references.bib
artifacts/rc-20260323-013554-3c7f03/: analysis.md  archive.md  bundle_index.json  checkpoint.json  decision.md  exp_plan.yaml  experiment_spec.md  goal.md  heartbeat.json  hypotheses.md  outline.md  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  paper_draft.md  paper_revised.md  pipeline_summary.json  problem_tree.md  quality_report.json  queries.json  references.bib  reviews.md  search_plan.yaml  synthesis.md  verification_report.json
artifacts/rc-20260323-023841-9b3aa9/: analysis.md  archive.md  bundle_index.json  checkpoint.json  decision.md  exp_plan.yaml  experiment_spec.md  goal.md  heartbeat.json  hypotheses.md  outline.md  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  paper_draft.md  paper_final.md  paper_revised.md  pipeline_summary.json  problem_tree.md  quality_report.json  queries.json  references.bib  references_verified.bib  reviews.md  search_plan.yaml  (+3 more)
researchclaw/: __main__.py  cli.py  config.py  evolution.py  hardware.py  health.py  prompts.py  quality.py  report.py  writing_guide.py
tests/: test_cli.py  test_config.py  test_evolution.py  test_hardware.py  test_latex.py  test_prompts.py  test_quality.py  test_stages.py
(+94 files in other folders)
